feat: Adding logging config
- Adding logs in TicketWorker

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,3 +46,7 @@ spring:
         max-concurrency: 50
         prefetch: 1
         acknowledge-mode: auto
+
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - [%X{requestId}] - %msg%n"
