--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,22 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=ticketdb'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
-      - '5433:5432'
+      - "${POSTGRES_PORT_EXTERNAL}:5432"
+
   rabbitmq:
     image: 'rabbitmq:3-management'
     environment:
-      - 'RABBITMQ_DEFAULT_PASS=secret'
-      - 'RABBITMQ_DEFAULT_USER=myuser'
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
     ports:
-      - '5672:5672'
-      - '15672:15672'
+      - "${RABBITMQ_PORT_EXTERNAL}:5672"
+      - "${RABBITMQ_UI_PORT}:15672"
+
   redis:
     image: 'redis:latest'
     ports:
-      - '6379:6379'
+      - "${REDIS_PORT}:6379"
